--- a/dokuwiki/gdust.html
+++ b/dokuwiki/gdust.html
@@ -131,6 +131,8 @@
 
 <a href="../dokuwiki/gdust.html" class="wikilink1" title="glowing_dusts">Glowing Dusts</a><br>
 
+<a href="../dokuwiki/gdust2.html" class="wikilink1" title="New_Dust_Info">└New Dust Info</a><br>
+
 <a href="../dokuwiki/mshard.html" class="wikilink1" title="metal_shards">Metal Shards</a><br>
 
 <a href="../dokuwiki/smg.html" class="wikilink1" title="sword_making_guide">Sword Making Guide</a><br>
@@ -384,6 +386,26 @@ Each dust is 4 times the complexity of a normal dust and is needed to tame monst
 New dust added for PvP purposes. Dust is 1 to 1 to the player Clvl you are fighting.<br>
 You would need 10 if you're fighting a level 10.<br>However there is a 1 in 400 chance 
 to still land a hit on an opponent without.
+</p>
+
+<p>
+<span style="color:orange; "><strong>Orange dust</strong></span>
+</p>
+
+<p>
+New dust added for the Steam August 2025 update. Adds fire elemental damage to a sword.<br>
+When added to a blade, it does extra fire elemental damage.<br>Will do more damage to mobs with a
+weakness to fire, and less damage to mobs that are resistant to fire.
+</p>
+
+<p>
+<span style="color:purple; "><strong>Purple dust</strong></span>
+</p>
+
+<p>
+New dust added for the Steam August 2025 update. Adds poison damage to a sword.<br>
+When added to a blade, it does extra poison damage.<br>Will do more damage to mobs with a
+weakness to poison, and have no effect mobs that are resistant to poison.
 </p>
 
 </div>
